--- a/css/styleJeu.css
+++ b/css/styleJeu.css
@@ -6,10 +6,14 @@ h1{
     text-shadow:1px 1px 2px black;
     }
     body{
+        display: flex;
         background:linear-gradient(to right, rgb(195, 0, 255),rgb(255, 182, 218));
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         justify-items: center;
         font-size: larger;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     
     }
     header{
@@ -23,6 +27,7 @@ h1{
         padding: 10px 5px 10px 5px ;
         font-size: 20px;
         justify-content: center;
+        justify-items: center;
         text-decoration: none;
         border: solid white 1px;
         display: flex;
@@ -58,8 +63,7 @@ h1{
         margin-top: 20px;
         background-color: white;
         border-radius: 10px;
-        font-size: large;
-        
+        font-size: large;        
       }
       
 th,td {
@@ -67,14 +71,20 @@ th,td {
   padding: 8px 10px;
   height: 30px;
 }
+
 caption{
     font-size: larger;
     margin: 50px 0px 30px 0px;
     color: white;
 }
+
 .card {
     zoom: 1;
     vertical-align: top;
     margin: .4%;
     overflow: hidden;
+}
+
+img{
+    cursor:pointer;
 }
