--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -72,7 +72,24 @@ color: white;
     width: 800px;
     
 }
-
+.button{
+    justify-content: space-around;
+    justify-items: right;
+    font-size: large;
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-end;
+    
+}
+button{
+    background-color: rgb(240, 55, 178);
+    color: white;
+    border-radius: 10px;
+    padding: 5px;
+    width: max-content;
+    
+    
+}
 img{
     align-items: center;
     justify-content: center;
